[package]
name = "acf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.7"
indexmap = "2.1.0"
kstring = "2.0.0"
ordered-float = "4.2.0"
serde_json = "1.0.111"
winnow = { version = "0.5.34", default-features = false, features = ["alloc"] }
